adds README.md file

--- a/index.html
+++ b/index.html
@@ -75,40 +75,15 @@
 
         <div class="porfolio">
             <h5>PORTFOLIO</h5><br>
-            <div id="port1" style="justify-content: center; " class="row">
-              <div class="col-md-2">
-                  <img src="images/work4.jpg">
-                </div>
-                <div class="col-md-2">
-                    <img src="images/work3.jpg">
-                </div>
-                <div class="col-md-2">
-                    <img src="images/work2.jpg">
-            </div>
-            <div class="col-md-2">
-                <img src="images/work1.jpg">
+            <img src="images/work4.jpg" alt="work 4 porfolio">
+            <img src="images/work3.jpg" alt="work 3 porfolio">
+            <img src="images/work2.jpg" alt="work 2 porfolio">
+            <img src="images/work1.jpg" alt="work 1 porfolio">
+            <img src="images/work5.jpg" alt="work 5 porfolio">
+            <img src="images/work6.jpg" alt="work 6 porfolio">
+            <img src="images/work7.jpg" alt="work 7 porfolio">
+            <img src="images/work8.jpg" alt="work 8 porfolio">
         </div>
-        </div><br>
-
-        <div id="port1" style="justify-content: center; " class="row">
-            <div class="col-md-2">
-                <img src="images/work5.jpg">
-              </div>
-              <div class="col-md-2">
-                  <img src="images/work6.jpg">
-              </div>
-              <div class="col-md-2">
-                  <img src="images/work7.jpg">
-          </div>
-          <div class="col-md-2">
-              <img src="images/work8.jpg">
-      </div>
-    </div>
-    </div><br><br>
-    <div class="form">
-
-
-
         <h6> CONTACT US</h6><br>
         <input type="text" size="28" placeholder="name..." style="background: transparent;">
         <input type="text" size="28" placeholder="email..." style="background: transparent;">
